# image-processing-package

./: README.md
Projeto/image_processing/: README.md  exemplo.py  mesclar_paleta.py  pyproject.toml
Projeto/image_processing/image_processing/: __init__.py
Projeto/image_processing/image_processing.egg-info/: PKG-INFO  SOURCES.txt
